@@ -18,6 +18,7 @@ BASE_TESTS = \
 	gf2mat_test \
 	integration_test \
 	inv_test \
+	itfile_test \
 	ls_solve_test \
 	lu_test \
 	matfunc_test \
@@ -83,6 +84,8 @@ array_test_SOURCES = array_test.cpp
 bch_test_SOURCES = bch_test.cpp
 bessel_test_SOURCES = bessel_test.cpp
 channel_test_SOURCES = channel_test.cpp
+itfile_test_SOURCES = itfile_test.cpp
+itfile_test_CPPFLAGS = -DITFILE_TEST_FILE=\"$(srcdir)/itfile_test_data.it\" $(AM_CPPFLAGS)
 cholesky_test_SOURCES = cholesky_test.cpp
 circular_buffer_test_SOURCES = circular_buffer_test.cpp
 convcode_test_SOURCES = convcode_test.cpp
